--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+  font-size: medium;
+}
+
 body {
   font-family: Arial, sans-serif;
   display: flex;
@@ -8,6 +12,20 @@ body {
   background-color: #f0f0f0;
   margin: 0;
 }
+
+button {
+  padding: 10px;
+  margin-top: 15px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.center-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .calculator {
   background-color: white;
   padding: 20px;
@@ -18,14 +36,21 @@ body {
 .calculator h2 {
   margin-top: 0;
 }
-.input-group {
-  margin-bottom: 10px;
+.toggle-button {
+  padding: 5px 20px 5px 20px;
+  font-size: 18px;
+  font-weight: bold;
+  width: 75%;
 }
-.input-group label {
-  display: block;
+
+.action-panel {
+  margin: 15px 0px 15px 0px;
+  display: none;
+}
+.action-panel label {
   margin-bottom: 5px;
 }
-.input-group input {
+.action-panel input {
   width: 100%;
   padding: 8px;
   box-sizing: border-box;
@@ -36,6 +61,7 @@ body {
 }
 .buttons button {
   padding: 10px;
+  margin-top: 15px;
   border: none;
   background-color: #4caf50;
   color: white;
