--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,14 @@ button {
   padding: 8px;
   box-sizing: border-box;
 }
+
+table,
+th,
+td {
+  white-space: nowrap;
+  border: 1px solid black;
+  padding: 0px;
+}
 .buttons button {
   padding: 10px;
   margin-top: 15px;
