--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,16 @@
+/* Global styles */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html {
-  font-size: medium;
+  font-size: 14px;
 }
 
 body {
+  font-size: 14px;
   font-family: Arial, sans-serif;
   display: flex;
   flex-direction: column;
@@ -13,6 +21,7 @@ body {
   margin: 0;
 }
 
+/* Style for buttons */
 button {
   padding: 10px;
   margin-top: 15px;
@@ -20,57 +29,64 @@ button {
   border-radius: 5px;
 }
 
-.center-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.toggle-button {
+  padding: 5px 20px;
+  font-size: 14px;
+  font-weight: bold;
+  width: 60%;
 }
 
+/* Style for the calculator container */
 .calculator {
   background-color: white;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 300px;
+  height: 80vh;
+  width: 90vw;
+  text-align: center;
 }
+
 .calculator h2 {
   margin-top: 0;
 }
-.toggle-button {
-  padding: 5px 20px 5px 20px;
-  font-size: 18px;
-  font-weight: bold;
-  width: 75%;
-}
 
+/* Style for the action panel */
 .action-panel {
-  margin: 15px 0px 15px 0px;
+  margin: 15px 0;
   display: none;
 }
+
 .action-panel label {
   margin-bottom: 5px;
 }
+
 .action-panel input {
   width: 100%;
   padding: 8px;
-  box-sizing: border-box;
+}
+
+/* Style for the container with corner text elements */
+.container {
+  height: 55%;
+  overflow-x: auto;
 }
 
 .container-record {
   position: relative;
   width: 80%;
-  height: 150%;
-  margin: 50px auto;
-  border: 2px solid red;
+  height: 8vh;
+  min-height: min-content;
+  margin: 10px 50px;
+  border: none;
   background-color: #f9f9f9;
-  box-sizing: border-box;
 }
 
 /* Common styles for corner text elements */
 .corner-text {
   position: absolute;
   font-size: 1em;
-  padding: 5px;
+  margin: 1vh;
 }
 
 /* Top-left corner */
@@ -97,13 +113,15 @@ button {
   right: 0;
 }
 
+/* Style for table and buttons */
 table,
 th,
 td {
   white-space: nowrap;
   border: 1px solid black;
-  padding: 0px;
+  padding: 0;
 }
+
 .buttons button {
   padding: 10px;
   margin-top: 15px;
@@ -114,14 +132,17 @@ td {
   border-radius: 5px;
   width: 48%;
 }
+
 .buttons button:disabled {
   background-color: #ccc;
 }
+
 .total-loan {
   margin-top: 20px;
-  font-size: 18px;
+  font-size: 14px;
 }
 
+/* Style for the clock */
 .clock {
   position: fixed;
   bottom: 10px;
