--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,8 @@
   box-sizing: border-box;
 }
 
-html {
-  font-size: 14px;
-}
-
 body {
-  font-size: 14px;
+  font-size: 16px;
   font-family: Arial, sans-serif;
   display: flex;
   flex-direction: column;
@@ -20,21 +16,26 @@ body {
   background-color: #f0f0f0;
   margin: 0;
 }
+.main p {
+  margin: 0;
+  padding: 0.5vh;
+  font-weight: bold;
+}
 
 /* Style for buttons */
 button,
 input {
   padding: 10px;
-  margin: 15px 0px;
+
   cursor: pointer;
   border-radius: 5px;
   font-size: 18px;
 }
 
 .toggle-button {
-  padding: 5px 20px;
+  padding: 8px 5vw;
   font-weight: bold;
-  width: 60%;
+  width: 45%;
 }
 
 /* Style for the calculator container */
@@ -63,13 +64,19 @@ input {
 }
 
 .action-panel input {
-  width: 100%;
+  width: 40%;
   padding: 8px;
+  margin-right: 10px;
+}
+
+#selectedDate {
+  width: 25%;
 }
 
 /* Style for the container with corner text elements */
 .container {
   overflow-x: auto;
+  margin: 2vh 0;
 }
 
 .container-record {
@@ -77,7 +84,10 @@ input {
   margin-bottom: 1vh;
   height: 8vh;
   border: none;
-  background-color: #f9f9f9;
+  background-color: #f3f3f3;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #f3f3f3;
 }
 
 /* Common styles for corner text elements */
@@ -111,15 +121,6 @@ input {
   right: 0;
 }
 
-/* Style for table and buttons */
-table,
-th,
-td {
-  white-space: nowrap;
-  border: 1px solid black;
-  padding: 0;
-}
-
 .buttons button {
   padding: 10px;
   margin-top: 15px;
@@ -133,11 +134,6 @@ td {
 
 .buttons button:disabled {
   background-color: #ccc;
-}
-
-.total-loan {
-  margin-top: 20px;
-  font-size: 14px;
 }
 
 /* Style for the clock */
