--- a/css/style.css
+++ b/css/style.css
@@ -17,16 +17,40 @@ body {
   margin: 0;
 }
 .main {
+  background-color: #f0f0f094;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 80%;
+  max-width: 600px;
+  text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  height: 15%;
+  margin: 2vh auto; /* Center horizontally */
 }
-.main p {
-  margin: 0;
-  padding: 0.5vh;
+
+/* Paragraph styles */
+.normal {
+  font-size: 1.2em;
+  margin: 10px 0;
+}
+
+.light {
+  font-size: 1em;
+  font-weight: lighter;
+  color: gray;
+}
+
+.heavy {
+  font-size: 1.2em;
+  font-weight: 600;
+}
+
+#monthly-due {
   font-weight: bold;
+  color: #4caf50;
 }
 
 /* Style for buttons */
